[gd_scene load_steps=4 format=3 uid="uid://y8mhpwmv1th0"]

[ext_resource type="Script" uid="uid://ba8jhfrmnuoow" path="res://enemies/enemy_spawner.gd" id="1_531ly"]
[ext_resource type="Texture2D" uid="uid://13ebclpk4f48" path="res://assets/spawner.png" id="1_mjbfh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_531ly"]
radius = 11.0

[node name="EnemySpawner" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_531ly")

[node name="Spawner" type="Sprite2D" parent="."]
texture = ExtResource("1_mjbfh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_531ly")
disabled = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="EnemyPool" type="Node" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
